--- a/samples/photo_album_with_jquery/app/js/photo-list.component.html
+++ b/samples/photo_album_with_jquery/app/js/photo-list.component.html
@@ -1,9 +1,10 @@
 <div id="posterframe">
   <!-- This will render the fetched Facebook profile picture using Cloudinary according to the
   requested transformations. This also shows how to chain transformations -->
-  <cl-image public-id="officialchucknorrispage" type="facebook" angle="20">
-    AABBB
-    <!--<cl-transformation format="png" height="95" width="95" crop="thumb" gravity="face" effect="sepia" radius="20"/>-->
+  <cl-image publicId="officialchucknorrispage" type="facebook" angle="20">
+    <cl-transformation effect="art:incognito"></cl-transformation>
+    <cl-transformation format="png" height="95" width="95" crop="thumb" gravity="face" radius="20">
+    </cl-transformation>
   </cl-image>
 </div>
 
@@ -24,3 +25,22 @@
 
 <h1>Your Photos</h1>
 
+<div class="actions">
+  <a class="upload_link" href="#/photos/new">Add photo with JQuery File upload</a>
+</div>
+
+<div class="photos">
+  <p *ngIf="photos.length === 0 || !photos">No photos were added yet.</p>
+  <div class="photo" *ngFor="let photo of photos"> <!-- | orderBy:'version':true -->
+    <h2>TITLE</h2> <!-- {{photo.context.custom.photo}} -->
+      <!--<cl-image publicId="{{photo.public_id}}" class="thumbnail inline" width="150" height="150" crop="fit" quality="80" format="jpg">
+      </cl-image>-->
+    <a [cl_href]="photo.public_id" format="jpg" target="_blank">
+      <cl-image publicId="{{photo.public_id}}" class="thumbnail inline" width="150" height="150" crop="fit" quality="80" format="jpg">
+      </cl-image>
+    </a>
+  </div>
+
+  <div class="note">
+    Take a look at our documentation of <a href="http://cloudinary.com/documentation/image_transformations" target="_blank">Image Transformations</a> for a full list of supported transformations.
+  </div>
