--- a/samples/photo_album_with_jquery/app/partials/photo-list.html
+++ b/samples/photo_album_with_jquery/app/partials/photo-list.html
@@ -1,7 +1,7 @@
 <div id="posterframe">
   <!-- This will render the fetched Facebook profile picture using Cloudinary according to the
   requested transformations. This also shows how to chain transformations -->
-  <cl-image public-id="officialchucknorrispage" type="facebook" angle="20">
+  <cl-image publicId="officialchucknorrispage" type="facebook" angle="20">
     <cl-transformation format="png" height="95" width="95" crop="thumb" gravity="face" effect="sepia" radius="20"/>
   </cl-image>
 </div>
@@ -32,7 +32,7 @@
   <div class="photo" ng-repeat="photo in photos | orderBy:'version':true">
     <h2>{{photo.context.custom.photo}}</h2>
     <a cl-href="{{photo.public_id}}" format="jpg" target="_blank">
-      <cl-image public-id="{{photo.public_id}}" class="thumbnail inline" width="150" height="150" crop="fit" quality="80" format="jpg"/>
+      <cl-image publicId="{{photo.public_id}}" class="thumbnail inline" width="150" height="150" crop="fit" quality="80" format="jpg"/>
     </a>
 
     <div class="less_info">
@@ -44,7 +44,7 @@
         <tr>
           <td>
             <div class="thumbnail_holder">
-              <cl-image public-id="{{photo.public_id}}" class="thumbnail inline" crop="fill" height="150" width="150" radius="10" format="jpg"/>
+              <cl-image publicId="{{photo.public_id}}" class="thumbnail inline" crop="fill" height="150" width="150" radius="10" format="jpg"/>
             </div>
             <table class="info">
               <tr><td>crop</td><td>fill</td></tr>
@@ -56,7 +56,7 @@
           </td>
           <td>
             <div class="thumbnail_holder">
-              <cl-image public-id="{{photo.public_id}}" class="thumbnail inline" crop="scale" height="150" width="150" format="jpg"/>
+              <cl-image publicId="{{photo.public_id}}" class="thumbnail inline" crop="scale" height="150" width="150" format="jpg"/>
             </div>
             <table class="info">
               <tr><td>crop</td><td>scale</td></tr>
@@ -67,7 +67,7 @@
           </td>
           <td>
             <div class="thumbnail_holder">
-              <cl-image public-id="{{photo.public_id}}" class="thumbnail inline" crop="fit" height="150" width="150" format="jpg"/>
+              <cl-image publicId="{{photo.public_id}}" class="thumbnail inline" crop="fit" height="150" width="150" format="jpg"/>
             </div>
             <table class="info">
               <tr><td>crop</td><td>fit</td></tr>
@@ -78,7 +78,7 @@
           </td>
           <td>
             <div class="thumbnail_holder">
-              <cl-image public-id="{{photo.public_id}}" class="thumbnail inline" crop="thumb" gravity="face" height="150" width="150" format="jpg"/>
+              <cl-image publicId="{{photo.public_id}}" class="thumbnail inline" crop="thumb" gravity="face" height="150" width="150" format="jpg"/>
             </div>
             <table class="info">
               <tr><td>crop</td><td>thumb</td></tr>
@@ -90,7 +90,7 @@
           </td>
           <td>
             <div class="thumbnail_holder">
-              <cl-image public-id="{{photo.public_id}}" class="thumbnail inline" angle="20" format="jpg">
+              <cl-image publicId="{{photo.public_id}}" class="thumbnail inline" angle="20" format="jpg">
                 <cl-transformation height="150" width="150" crop="fill" gravity="north" effect="sepia" radius="20"/>
               </cl-image>
             </div>
