--- a/samples/photo_album_with_jquery/app/js/photo-list.component.html
+++ b/samples/photo_album_with_jquery/app/js/photo-list.component.html
@@ -33,7 +33,7 @@
   <div class="photo" *ngFor="let photo of photos">
     <!-- | orderBy:'version':true -->
     <h2>{{photo.context.custom.photo}}</h2>
-    <a [cl_href]="photo.public_id" format="jpg" target="_blank">
+    <a [attr.cl-href]="photo.public_id" format="jpg" target="_blank">
       <cl-image [attr.public-id]="photo.public_id" class="thumbnail inline" width="150" height="150" crop="fit" quality="80" format="jpg">
       </cl-image>
     </a>
