--- a/samples/photo_album_with_jquery/app/js/photo-list.component.html
+++ b/samples/photo_album_with_jquery/app/js/photo-list.component.html
@@ -25,7 +25,7 @@
 <h1>Your Photos</h1>
 
 <div class="actions">
-  <a class="upload_link" href="#/photos/new">Add photo with JQuery File upload</a>
+  <a class="upload_link" href="photos/new">Add photo with JQuery File upload</a>
 </div>
 
 <div class="photos">
