--- a/samples/photo_album_with_jquery/app/js/photo-list.component.html
+++ b/samples/photo_album_with_jquery/app/js/photo-list.component.html
@@ -2,7 +2,7 @@
 	<!-- This will render the fetched Facebook profile picture using Cloudinary according to the
   requested transformations. This also shows how to chain transformations -->
 	<cl-image [attr.public-id]="'officialchucknorrispage'" type="facebook" angle="20">
-		<cl-transformation effect="art:incognito"></cl-transformation>
+		<cl-transformation effect="art:hokusai"></cl-transformation>
 		<cl-transformation format="png" height="95" width="95" crop="thumb" gravity="face" radius="20">
 		</cl-transformation>
 	</cl-image>
@@ -25,15 +25,16 @@
 <h1>Your Photos</h1>
 
 <div class="actions">
-	<a class="upload_link" href="photos/new">Add photo with JQuery File upload</a>
+	<a class="upload_link" routerLink="new">Add photo with JQuery File upload</a>
 </div>
 
 <div class="photos">
-	<p *ngIf="photos.length === 0 || !photos">No photos were added yet.</p>
-	<div class="photo" *ngFor="let photo of photos">
+	<p *ngIf="errorOccurred">No photos were added yet.</p>
+	<p *ngIf="photos.length === 0 | async">No photos were added yet.</p>
+	<div class="photo" *ngFor="let photo of photos | async">
 		<!-- | orderBy:'version':true -->
 		<h2 *ngIf="photo.context">{{photo.context.custom.photo}}</h2>
-		<a [attr.cl-href]="photo.public_id" format="jpg" target="_blank">
+		<a [cl_href]="photo.public_id" format="jpg" target="_blank">
 			<cl-image [attr.public-id]="photo.public_id" class="thumbnail inline" width="150" height="150" crop="fit" quality="80" format="jpg">
 			</cl-image>
 		</a>
