Simplify usage of publicId on cl-image tag and change cl_href to clHref

--- a/samples/photo_album_with_jquery/app/js/photo-list.component.html
+++ b/samples/photo_album_with_jquery/app/js/photo-list.component.html
@@ -1,7 +1,7 @@
 <div id="posterframe">
 	<!-- This will render the fetched Facebook profile picture using Cloudinary according to the
   requested transformations. This also shows how to chain transformations -->
-	<cl-image [attr.public-id]="'officialchucknorrispage'" type="facebook" angle="20">
+	<cl-image publicId="officialchucknorrispage" type="facebook" angle="20">
 		<cl-transformation effect="art:hokusai"></cl-transformation>
 		<cl-transformation format="png" height="95" width="95" crop="thumb" gravity="face" radius="20">
 		</cl-transformation>
@@ -34,8 +34,8 @@
 	<div class="photo" *ngFor="let photo of photos | async">
 		<!-- | orderBy:'version':true -->
 		<h2 *ngIf="photo.context">{{photo.context.custom.photo}}</h2>
-		<a [cl_href]="photo.public_id" format="jpg" target="_blank">
-			<cl-image [attr.public-id]="photo.public_id" class="thumbnail inline" width="150" height="150" crop="fit" quality="80" format="jpg">
+		<a [clHref]="photo.public_id" format="jpg" target="_blank">
+			<cl-image publicId={{photo.public_id}} class="thumbnail inline" width="150" height="150" crop="fit" quality="80" format="jpg">
 			</cl-image>
 		</a>
 		<div class="less_info">
@@ -47,7 +47,7 @@
 				<tr>
 					<td>
 						<div class="thumbnail_holder">
-							<cl-image [attr.public-id]="photo.public_id" class="thumbnail inline" crop="fill" height="150" width="150" radius="10" format="jpg">
+							<cl-image publicId={{photo.public_id}} class="thumbnail inline" crop="fill" height="150" width="150" radius="10" format="jpg">
 							</cl-image>
 						</div>
 						<table class="info">
@@ -72,7 +72,7 @@
 					</td>
 					<td>
 						<div class="thumbnail_holder">
-							<cl-image [attr.public-id]="photo.public_id" class="thumbnail inline" crop="scale" height="150" width="150" format="jpg">
+							<cl-image publicId={{photo.public_id}} class="thumbnail inline" crop="scale" height="150" width="150" format="jpg">
 							</cl-image>
 						</div>
 						<table class="info">
@@ -93,7 +93,7 @@
 					</td>
 					<td>
 						<div class="thumbnail_holder">
-							<cl-image [attr.public-id]="photo.public_id" class="thumbnail inline" crop="fit" height="150" width="150" format="jpg">
+							<cl-image publicId={{photo.public_id}} class="thumbnail inline" crop="fit" height="150" width="150" format="jpg">
 							</cl-image>
 						</div>
 						<table class="info">
@@ -114,8 +114,7 @@
 					</td>
 					<td>
 						<div class="thumbnail_holder">
-							<cl-image [attr.public-id]="photo.public_id" class="thumbnail inline" crop="thumb" gravity="face" height="150" width="150"
-								format="jpg">
+							<cl-image publicId={{photo.public_id}} class="thumbnail inline" crop="thumb" gravity="face" height="150" width="150" format="jpg">
 							</cl-image>
 						</div>
 						<table class="info">
@@ -140,7 +139,7 @@
 					</td>
 					<td>
 						<div class="thumbnail_holder">
-							<cl-image [attr.public-id]="photo.public_id" class="thumbnail inline" angle="20" format="jpg">
+							<cl-image publicId={{photo.public_id}} class="thumbnail inline" angle="20" format="jpg">
 								<cl-transformation height="150" width="150" crop="fill" gravity="north" effect="sepia" radius="20">
 								</cl-transformation>
 							</cl-image>
