--- a/samples/photo_album/app/partials/photo-list.html
+++ b/samples/photo_album/app/partials/photo-list.html
@@ -30,7 +30,7 @@
 	<p ng-if="photos.length === 0 || !photos">No photos were added yet.</p>
 	<div class="photo" ng-repeat="photo in photos | orderBy:'version':true">
 		<h2>{{photo.context.custom.photo}}</h2>
-		<a cl_href="photo.public_id" format="jpg" target="_blank">
+		<a clHref="photo.public_id" format="jpg" target="_blank">
 			<cl-image public-id="photo.public_id" class="thumbnail inline" width="150" height="150" crop="fit" quality="80" format="jpg"
 			/>
 		</a>
